# CosmoNaut

./: .gitignore  DEPLOYMENT.md  GITHUB_ACTIONS_GUIDE.md  README.md  TESTING.md  all_tests_err.txt  build_log.txt  build_log_utf8.txt  build_output.txt  bun_test_output.txt  debug_log_full.txt  debug_log_full_utf8.txt  debug_log_latest.txt  debug_log_latest_utf8.txt  debug_output.txt  debug_output_utf8.txt  debug_render.txt  debug_render_utf8.txt  diagnostic_output.txt  documentation.md  errors_full.txt  errors_full_utf8.txt  errors_only_lint.txt  fix_layout.py  flow_loading_tsc.txt  flows_lint.txt  flows_lint_utf8.txt  fresh_test_err.txt  fresh_test_err_plain.txt  full_lint.txt  full_lint_output.txt  keys.txt  lint_errors.txt  lint_output.txt  lint_results.json  lint_unix.txt  local_test_run.txt  local_test_run_utf8.txt  meaningful_errors.txt  meaningful_errors_utf8.txt  (+30 more)
.github/workflows/: release.yml  verify.yml
app/: globals.css  layout.tsx  page.tsx
app/components/: AnalyticsDashboard.tsx  Astronaut.tsx  AuthCard.tsx  AuthProvider.tsx  (+27 more)
docs/: Epic1.txt  Epic2.txt  Epic3.txt  Overview.txt
public/: about.html
scripts/: test-resend.ts
src-tauri/: Cargo.toml  build_log.txt  rust_errors.txt  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/src/auth/: google.rs  mod.rs  server.rs  storage.rs  token.rs
test/: setup.tsx
website/: BACKGROUND_UPDATE.md  README.md  STARS_UPDATE.md  antigravity.js  auth.js  clickspark.js  index.html  script.js  stars.js  styles.css  vercel.json
(+63 files in other folders)
