[package]
name = "app"
version = "0.1.13"
description = "A Tauri App"
authors = ["you"]
license = ""
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.5.4", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.10.0", features = [] }
tauri-plugin-log = "2"
tauri-plugin-shell = "2"
tauri-plugin-opener = "2"
tauri-plugin-updater = "2"
tauri-plugin-notification = "2"
tauri-plugin-process = "2"
reqwest = { version = "0.12", features = ["json", "rustls-tls", "stream"] }
chrono = "0.4"
tokio = { version = "1", features = ["full"] }
uuid = { version = "1.8", features = ["v4"] }
futures-util = "0.3"
# Google OAuth dependencies
axum = { version = "0.7", features = ["tokio"] }
tower = "0.4"
jsonwebtoken = "9.2"
base64 = "0.21"
rand = "0.8"
keyring = "2.3"
url = "2.5"
lazy_static = "1.4"
urlencoding = "2.1"

[dev-dependencies]
mockito = "1.7.2"
